Fixing SpotBug findings